# llvm-hs-kaleidoscope

./: .gitignore  .travis.yml  LICENSE  README.md  kaleidoscope.cabal  llvm-hs-kaleidoscope.cabal  snapshot.yaml  stack.yaml  tutorial.cabal
.hie/: Codegen.hie  JIT.hie  Main.hie
src/: Codegen.hs  JIT.hs  Main.hs
