name:                tutorial
version:             0.1.0.0
synopsis:            Standalone LLVM JIT Tutorial
license:             MIT
category:            Compilers
description:         
synopsis:            
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable main
  build-depends:       
    base         >= 4.6 && <4.10,
    mtl          >= 2.2,
    containers   >= 0.5,
    llvm-hs      >= 4.0,
    llvm-hs-pure >= 4.0

  other-modules:
    Codegen
    JIT

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
